--- a/home.html
+++ b/home.html
@@ -5,7 +5,8 @@
    "http://www.w3.org/TR/html4/strict.dtd">
 <HTML>
    <BODY>
-      <P>¡Hola mundo!
+      <P>¡Hola mundo!</P>
+      <P>¡Hola mundo!</P>
    </BODY>
 
 </HTML>
